# plover-game-mode

./: README.md  plover.code-workspace  plover_game_mode.py  setup.cfg
plover_game_mode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
