[metadata]
name = plover-game-mode
version = 0.0.1
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
packages =
  # none
py_modules =
  plover_game_mode
  
[options.entry_points]
plover.extension =
  plover_game_mode = plover_game_mode:GameMode